<resources>
    <string name="app_name">Minha Grade UFRJ</string>
    <string name="course_prompt">Escolha um curso</string>
    <string name="loading">Carregando</string>
    <string name="progress_course_name">Seu Curso</string>
    <string name="add_disciplina">Escolha as disciplinas</string>
    <string name="add_disciplina_ok">OK</string>
    <string name="add_disciplina_cancel">Cancelar</string>
    <string name="periodo_selecionado">Período Selecionado</string>
    <string name="progress_concluido">Concluído :</string>
    <string name="progress_cursando">Cursando :</string>
    <string name="progress_faltando">Faltando :</string>
    <string name="disciplina">Disciplina</string>
    <string name="status">status</string>
    <string name="periodo">período</string>
    <string name="entrar">Entrar</string>
    <string name="course_curso">Seu curso :</string>
    <string name="minha_grade">Minha Grade</string>
    <string name="criar_lembrete_btn">Criar lembrete</string>
    <string name="submit_lembrete_btn">Salvar lembrete</string>
    <string name="ver_lembrete_btn">Ver lembretes</string>
    <string name="cancelar_lembrete_btn">Cancelar</string>
    <string name="fechar_lembrete_btn">Fechar lembretes</string>
    <string name="lembrete_texto">Lembrete</string>
    <string name="lembrete_tipo">Tipo</string>
    <string name="lembrete_disciplina">Disciplina</string>
    <string name="naoAchouCurso"><u>Não achou seu curso?</u></string>
    <string name="title_novo_curso">O que fazer?</string>

    <string-array name="cursos_array">
        <item>Ciência da Computação</item>
        <!--<item>Ciências Atuariais</item>-->
    </string-array>

    <string-array name="periodo_spinner">
        <item>1º período</item>
        <item>2º período</item>
        <item>3º período</item>
        <item>4º período</item>
        <item>5º período</item>
        <item>6º período</item>
        <item>7º período</item>
        <item>8º período</item>
        <item>9º período</item>
        <item>10º período</item>
        <item>11º período</item>
        <item>12º período</item>
        <item>13º período</item>
        <item>14º período</item>
        <item>15º período</item>
        <item>16º período</item>
        <item>17º período</item>
        <item>18º período</item>
        <item>19º período</item>
        <item>20º período</item>
    </string-array>
    <string name="title_activity_novo_curso">Novo Curso</string>

    <!-- Configurações -->
    <string name="title_activity_configuracoes">Configurações</string>
    <string name="sobre">Sobre</string>
    <string name="dialog_sobre_description">O Minha Grade foi desenvolvido pela DevMob - Grupo de
        Extensão em Desenvolvimento Mobile da UFRJ. Qualquer contato pode ser feito através do email devmobufrj@gmail.com,
        mais informações sobre o grupo na página no facebook: DevMob UFRJ.
        \n\nDesenvolvedores:
        \n&#8226; Hylson Kobayashi
        \n&#8226; Murilo Moura
        \n\nColaboração:
        \n&#8226; Luiz Fernando (dev)
        \n&#8226; George Rappel (dev)</string>
    <string name="texto_novo_curso">Parece que não temos ainda seu curso no nosso sistema, para inseri-lo precisamos que nos envie o nome do seu curso, disciplinas e seus períodos correspondentes.

    \n\nToque no ícone abaixo caso deseje nos enviar as informações do seu curso.</string>
    <string name="title_activity_tab_periodos">TabPeriodosActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_new_couse">NewCouseActivity</string>
    <string name="logo_minha_grade">Logo Minha Grade</string>
    <string name="logo_devmob">Logo DevMob</string>

</resources>
